<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_backgroud"
    android:orientation="vertical"
    tools:context=".ui.welcome.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/header_img" />

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="314dp"
            android:layout_height="314dp"
            android:layout_gravity="center"
            android:layout_marginTop="-9dp"
            android:src="@drawable/welcome_img" />

        <LinearLayout
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="46dp"
            android:orientation="horizontal"
            android:alpha="0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/yoga"
                android:textColor="@color/font_black"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/lyze"
                android:textColor="@color/dark_green"
                android:textSize="32sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/appDesc"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textColor="@color/font_black"
            android:textSize="14sp"
            android:alpha="0"/>

        <LinearLayout
            android:id="@+id/buttonToLoginRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:alpha="0">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/button_bg_pink"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/login"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <View
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/button_bg_pink"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/register"
                android:textSize="16sp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>