<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/white_backgroud"
    android:layout_marginBottom="16dp">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/hello"
        android:textColor="@color/font_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/name"
        android:textColor="@color/font_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_hello"
        app:layout_constraintStart_toEndOf="@id/tv_hello"
        app:layout_constraintTop_toTopOf="@id/tv_hello" />

    <TextView
        android:id="@+id/tv_home_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/have_a_calm_and_peaceful_day"
        android:textColor="@color/font_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_hello"
        app:layout_constraintTop_toBottomOf="@id/tv_hello" />

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/search_view_bg"
        android:iconifiedByDefault="false"
        android:queryHint="Search"
        android:queryBackground="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_home_text"
        app:layout_constraintTop_toBottomOf="@id/tv_home_text" />

    <FrameLayout
        android:id="@+id/yogalyze_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="@id/search_bar"
        app:layout_constraintTop_toBottomOf="@id/search_bar">

        <View
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:background="@drawable/green_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/how_yogalyze_works"
            android:textColor="@color/font_black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/watch_a_small_video_about_how_this_app_helps_you_to_stay_fit"
            android:textColor="@color/font_black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/button_bg_pink"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/continues"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="94dp"
            android:layout_height="180dp"
            android:layout_gravity="right"
            android:layout_marginRight="32dp"
            android:src="@drawable/home_img" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_yoga_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/yoga_options"
        android:textColor="@color/font_black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yogalyze_video" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/yogaRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_yoga_options"
        tools:listitem="@layout/yoga_item_view"/>

    <TextView
        android:id="@+id/resultNotFoundTextView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_yoga_options"
        android:text="No Result Found"
        android:gravity="center_horizontal|center_vertical"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/font_black"
        android:textSize="12sp"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>